syntax = "proto3";

package vault.v1;
option go_package = "github.com/unkeyed/unkey/apps/vault/gen/proto/vault/v1;vaultv1";



enum Algorithm {
  AES_256_GCM = 0;
}



message DataEncryptionKey {
  string id = 1;
  // Linux milliseconds since epoch
  int64 created_at= 2;
  bytes key = 3;
}


// This is stored in the database in whatever format the database uses
message EncryptedDataEncryptionKey {
  string id = 1;
  // Linux milliseconds since epoch
  int64 created_at= 2;
  Encrypted encrypted = 3;
}

// KeyEncryptionKey is a key used to encrypt data encryption keys
message KeyEncryptionKey {
  string id = 1;
  int64 created_at = 2;
  bytes key = 3;
  
}


// Encrypted contains the output of the encryption and all of the metadata required to decrypt it
message Encrypted {
  Algorithm algorithm = 1;
  bytes nonce = 2;
  bytes ciphertext = 3;
  // key id of the key that encrypted this data
  string encryption_key_id = 4;

  // time of encryption
  // we can use this later to figure out if a piece of data should be re-encrypted
  int64 time = 5;
}
